--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  /*text-align: center;*/
 }
 
 .App-logo {
@@ -19,4 +19,34 @@
 
 .App-link {
   color: #09d3ac;
+}
+
+main {
+  padding: 22px 10px;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+li {
+  margin: 0 0 11px;
+  color: #333;
+}
+
+li:last-child {
+  margin-bottom: 0;
+}
+
+li span {
+  color: #959595;
+  display: inline-block;
+  min-width: 95px;
+  text-align: right;
+  margin-right: 12px;
+  text-transform: uppercase;
+  font-size: 15px;
+  letter-spacing: 1px;
 }
