--- a/src/Card.css
+++ b/src/Card.css
@@ -1,1 +1,51 @@
 /* Card CSS */
+body {
+  background-color: #e6f3ff;
+  font-family: Verdana;
+}
+
+.card-container {
+  background-color: #fff;
+  border-radius: 6px;
+  overflow: hidden;
+  max-width: 300px;
+  margin: 100px auto;
+  box-shadow: 0 10px 40px -14px rgba(135, 144, 158, 0.6), 0 10px 40px -10px rgba(135, 144, 158, 0.6);
+}
+
+.card-container header {
+  background-color: rgba(80, 103, 124, 0.73);
+  padding: 14px 18px;
+  font-size: 18px;
+}
+
+/* Avatar circle */
+.card-container header span {
+  display: inline-block;
+  border-radius: 50%;
+  background-color: #f7f7f7;
+  height: 40px;
+  width: 40px;
+  vertical-align: middle;
+  margin-right: 15px;
+  color: #959595;
+  font-size: inherit;
+  position: relative;
+}
+
+.card-container header span:after {
+  content: attr(initials);
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+}
+
+.card-container h2 {
+  display: inline-block;
+  font-weight: normal;
+  color: #fff;
+  font-size: inherit;
+  vertical-align: middle;
+  margin: 0;
+}
